--- a/src/app/bottom-bar/bottom-bar.component.html
+++ b/src/app/bottom-bar/bottom-bar.component.html
@@ -3,7 +3,7 @@
     <span [routerLink]="['/contact']" class="wordLink">Contact</span> |
     <a href="https://filmfreeway.com/SnohomishFilmFestival" class="wordLink">Film Freeway</a>
 </div>
-<div>Sponsors</div>
+<!--<div>Sponsors</div>
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-6">
@@ -13,4 +13,4 @@
             <a href="http://www.superpowersgame.com/superpowers/#/" target=_new><img src="assets/graphics/sponsors/superpowers538.jpg" class="imageSponsor"></a>
         </div>
     </div>
-</div>
+</div>-->
