--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="modal fade" id="loginPopup" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-lg" role="document" style="max-width: 320px;">
-        <div class="modal-content" [ngStyle]="ngStyleButton(2)">
+        <div class="modal-content" style="background-color: gray;">
             <div class="modal-header">
-                <b><i class="fa fa-sign-in"></i> Version 1.13</b>
+               <div style="font-size: 10px; ">Version 1.13</div>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
