--- a/src/app/page-shell/page-shell.component.scss
+++ b/src/app/page-shell/page-shell.component.scss
@@ -1,28 +1,63 @@
+.main-link {
+    font-size: 16px; 
+    font-weight: 600;
+    padding: 5px;
+    cursor: pointer;
+}
+.main-link:hover {
+    border-bottom: 3px solid gray;
+}
+.login-link {
+    font-size: 13px; 
+    font-weight: 500;
+    padding: 5px;
+    cursor: pointer;
+}
+.login-link:hover {
+    text-decoration: underline;
+}
+.active-link {
+    border-bottom: 3px solid #009;
+}
+.profile-link {
+    cursor: pointer;
+    width: 120px;
+    font-size: 16px;
+    padding: 5px;
+}
+.profile-link:hover {
+    background-color: #ccc; 
+}
+.profile-popup {
+    position: fixed; 
+    top: 56px; 
+    right: 10px; 
+    background-color: white; 
+    box-shadow: 2px 2px 2px gray; 
+    text-align: center;
+    z-index: 1000;
+}
+
 .page-outer {
     width: 100%;
     height: 100%;
     text-align: center;
 }
-.page-middle {
-    padding-top: 110px;
-    display: inline-block; 
-    width: 100%; 
-    height: 100%;
-    max-width: 800px; 
-    background-color: #575; 
-    box-shadow: 4px 4px 7px #000;
-    text-align: center;
-}
 .page-inner {
-    background-color: #575; 
-    padding-bottom: 20px;
+    display: inline-block; 
+    background-color: #ddd; 
+    width: 100%; 
+    max-width: 1000px;
+}
+.profile-pic {
+    height: 50px;
+    width: 50px;
+    object-fit: cover;
+    border-radius: 25px;
 }
 .navigation-bar {
-    position: fixed;
-    top: 0;
     width: 100%;
-    max-width: 800px;
-    background-color: #080; 
+    background-color: rgb(41, 0, 136); 
     color: white; 
     font-size: 24px; 
     padding: 10px;
