--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,9 +38,10 @@ input {
    box-shadow: 1px 1px 3px #444;
 }
 .titleCLass {
-   background-color: #041E42;
-   font-size: 16px;
-   color: white;
+   background-color: #bbb;
+   font-size: 18px;
+   font-weight: 700;
+   color: black;
    text-align: center;
    padding: 5px;
 }
@@ -66,15 +67,17 @@ input {
    padding: 5px;
 }
 .borderClass {
-   border: 1px solid black; 
    background-color: white;
    color: black;
    border-radius: 5px;
-   margin: 10px; 
-   padding: 5px;
-   box-shadow: 5px 5px 5px #444;
+   width: 100%;
+   margin: 5px; 
+   padding: 0;
    display: inline-block;
    text-align: left;
+}
+.box-inner {
+   padding: 7px;
 }
 .darkBox {
    background-color: #444;
