--- a/src/app/film-detail/film-detail.component.scss
+++ b/src/app/film-detail/film-detail.component.scss
@@ -1,8 +1,7 @@
 .detailCard {
     border-radius: 10px;
     overflow: hidden;
-    border: 1px solid black; 
-    box-shadow: 5px 5px 10px black;
+    box-shadow: 5px 5px 5px gray;
     text-align: left;
     background-color: white;
     color: black;
